Correct alignment on Project page (#1410)

--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -145,6 +145,7 @@
 }
 
 #content {
+  margin-left: -1em;
   #project-nav {
     @include tab-nav;
     border-bottom: solid;
